<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="horizontal"
    android:background="@drawable/fondo1"
    android:layout_height="match_parent"
    tools:context=".ui.Marcador">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="365dp" />

    <android.widget.Button
        android:id="@+id/btn_marcador_local"
        android:layout_width="263dp"
        android:layout_height="193dp"
        android:background="@drawable/btn_marcador"
        android:fontFamily="@font/alarmclock"
        android:text="@string/_0"
        android:textColor="@color/azul"
        android:textSize="@dimen/_140sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.111"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.224" />

    <android.widget.Button
        android:id="@+id/btn_marcador_visitante"
        android:layout_width="263dp"
        android:layout_height="193dp"
        android:background="@drawable/btn_marcador"
        android:fontFamily="@font/alarmclock"
        android:text="@string/_0"
        android:textColor="@color/azul"
        android:textSize="@dimen/_140sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.888"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.224" />

    <Button
        android:id="@+id/restar_marcaLocal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sansita"
        android:text="@string/restar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.216"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_marcador_local"
        app:layout_constraintVertical_bias="0.153" />

    <Button
        android:id="@+id/restar_marcaVisitante"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sansita"
        android:text="@string/restar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.78"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_marcador_visitante"
        app:layout_constraintVertical_bias="0.157" />

    <Button
        android:id="@+id/nuevo_marcador"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/botones"
        android:fontFamily="@font/sansita"
        android:text="@string/btn_nuevo_marcador"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.928" />

    <TextView
        android:id="@+id/txt_set"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sansita"
        android:textSize="@dimen/_20sp"
        android:text="@string/set"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.04" />

    <Button
        android:id="@+id/marcadorCero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/botones"
        android:fontFamily="@font/sansita"
        android:text="@string/btn_marcador_en_cero"
        app:layout_constraintBottom_toTopOf="@+id/nuevo_marcador"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.965" />


</androidx.constraintlayout.widget.ConstraintLayout>