<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo1"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/logo"
        android:layout_width="258dp"
        android:layout_height="202dp"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.202"
        app:layout_constraintVertical_chainStyle="spread"
        app:srcCompat="@drawable/vclub" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_20dp"
        android:elevation="@dimen/_10dp"
        app:cardCornerRadius="15dp"
        app:cardElevation="@dimen/_10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo">

        <LinearLayout
            android:layout_width="369dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/usuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_15dp"
                android:fontFamily="@font/sansita"
                android:text="@string/txt_nombre_de_usuario"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.301" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_usuario"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_margin="@dimen/_15dp"
                android:hint="@string/hint_usuario"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.266"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/usuario"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/text_contrasena"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_15dp"
                android:layout_marginBottom="424dp"
                android:fontFamily="@font/sansita"
                android:text="@string/txt_contrase_a"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_usuario"
                app:layout_constraintVertical_bias="0.0" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_contrasena"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_margin="@dimen/_15dp"
                android:hint="@string/hint_contrase_a"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.266"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_contrasena"
                app:layout_constraintVertical_bias="0.0" />

            <Button
                android:id="@+id/ingresar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_15dp"
                android:fontFamily="@font/sansita"
                android:text="@string/btn_ingresar"
                android:background="@drawable/botones"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_contrasena"
                app:layout_constraintVertical_bias="0.138" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>